--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>calculator</title>
 </head>
 <body>
+    <div class="calculator-body">
+        <input type="text" value="0" class="screen">
+        
+    </div>
     
 </body>
 </html>
