--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 
         }
         .btn-equals{
-            
+            height: 150px;
+        }
+        .btn:hover{
+            border: solid 1px black;
+            transition: 0.5s;
         }
     </style>
 </head>
